# iirc

./: CMakeLists.txt  README.md  config.ini
src/: Application.cpp  Application.h  DatabaseHandler.cpp  DatabaseHandler.h  IniReader.cpp  IniReader.h  IrcClient.cpp  IrcClient.h  IrcClientImpl.cpp  IrcClientImpl.h  IrcEvent.h  UserHandler.cpp  UserHandler.h  main.cpp
src/commands/: client.proto  common.proto  server.proto
src/config/: db.h
src/data/: ChannelData.cpp  ChannelData.h  ServerData.h  UserData.h
src/irc/: IrcClient.cpp  IrcClient.h  IrcClientImpl.cpp  IrcClientImpl.h
src/tcp/: TcpClient.cpp  TcpClient.h  TcpInterface.cpp  TcpInterface.h  TcpInterfaceImpl.cpp  TcpInterfaceImpl.h
